data/derived/comb/progs/unify/prog4119.ml.out
Characters 57-58:
  let fixpoint (f,b) = wwhile ((fun x -> let y = (f,x) in (y, y != b)),b);;
                                                           ^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a * 'b
